# MealApp

./: CMakeLists.txt  Meal.todo  README.md  REDME.md  conanfile.txt  main.cpp  meal.cpp  meal.h  meals_list.cpp  meals_list.h
headers/: constexpres_containers.h  local_stack_allocator.h  meal.h  meals_list.h  parse_meal.h  rolling_function.h  shared_structure.h  stack_checking_resource.h
sources/: meal.cpp  meals_list.cpp  parse_meal.cpp
test/: CMakeLists.txt  mytests.cpp
